--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.5.2",
     "@nuxtjs/tailwindcss": "^6.6.5",
+    "@tailwindcss/typography": "^0.5.9",
     "nuxt": "^3.4.0"
   }
 }
