--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/i18n": "^8.0.0-beta.12",
     "@nuxtjs/tailwindcss": "^6.7.0",
     "@tailwindcss/typography": "^0.5.9",
+    "express": "^4.18.2",
     "nuxt": "^3.5.1",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0"
